# qa

./: .env  main.py  pyproject.toml  requirements.txt
.deepeval/: .deepeval_telemetry.txt
config/: settings.py
data/: golden_dataset.json
docs/qa/: debug_models.py
src/agents/monitoring/: logger.py
src/evaluation/metrics/: hallucination.py
src/evaluation/runners/: eval_runner.py
