[project]
name = "qa"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "azure-identity>=1.25.3",
    "deepeval>=4.1.1",
    "google-genai>=2.12.1",
    "google-generativeai>=0.8.6",
    "langchain>=1.3.14",
    "langchain-openai>=1.3.5",
    "ollama>=0.6.2",
    "pandas>=3.0.3",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
]
